ingress/ingress-design-system-alpha-canadaca-prod.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: design-system-alpha-canadaca-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - design.alpha.canada.ca
    secretName: design-system-alpha-tls-secret-prod
  rules:
  - host: design.alpha.canada.ca
    http:
      paths:
      - backend:
          serviceName: nginx-en
          servicePort: 80
        path: /
